tests/valid/strings/null_termination.rs
/*
executionExitCode: 0
*/

main(): i32{
    string: [i8, 15] = "Hello, World!\n";
    return string[14];
}