tests/invalid/strings/missing_end_quote.rs
/*
compilationExitCode: 1
*/

main(): i32{
    string: [i8, 20] = "Hello, World!\n;
    return 0;
}